Revise README for improved clarity and structure
Updated project description and installation instructions for clarity and accuracy.